--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/ioredis": "^5.0.0",
+    "bullmq": "^5.7.8",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
