--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
